# fujin

./: README.md
.agents/rules/: compile-guide.md
.docs/: fujin_bsp.excalidraw
boards/Fujin_Encoder/: CAMtastic1.Cam  CAMtastic2.Cam  EncoderLib.PcbLib  EncoderLib.SchLib  Fujin_Encoder.PcbDoc  Fujin_Encoder.PrjPcb  Fujin_Encoder.SchDoc  Fujin_Encoder.step
boards/Fujin_V1/: CAMtastic1.Cam  CAMtastic2.Cam  FujinLib.SchLib  Fujin_Body.DWG  Fujin_Body.PcbDoc  Fujin_Body_2.DWG  Fujin_Body_4.DXF  Fujin_Connectors.SchDoc  Fujin_Main.SchDoc  Fujin_Motors.SchDoc  Fujin_Peripherals.SchDoc  Fujin_V1.$$$Structure  Fujin_V1.PrjPcb
firmware/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  fujin.ioc  params.txt  test_movements  toolchain_stm32.cmake
firmware/.agents/rules/: compile-guide.md
firmware/cmake/: target_pc.cmake  target_stm32g4.cmake
firmware/cube/: STM32G474RCTx_FLASH.ld  fujin.ioc  stm32g474rctx_flash.ld
firmware/cube/STM32G474RCT6/: .mxproject  Makefile  STM32G474RCTx_FLASH.ld  fujin.ioc
firmware/cube/STM32G474RCT6/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
firmware/cube/STM32G474RCT6/Core/Src/: adc.c  cube_main.c  gpio.c  i2c.c  spi.c  stm32g4xx_it.c  tim.c  usart.c
firmware/cube/STM32G474RCT6/USB_Device/App/: usbd_desc.c
firmware/inc/: bsp.h  utils.h
firmware/inc/algorithms/: flood_fill.hpp  pid.hpp
firmware/inc/bsp/: analog_sensors.h  analog_sensors.hpp  ble.h  ble.hpp  bsp_adc_dma.h  bsp_eeprom.h  bsp_fan.h  bsp_gpio.h  bsp_i2c.h  bsp_led.h  bsp_led_ir.h  bsp_motors.h  bsp_spi.h  bsp_vcp.h  bsp_ws2812.h  buttons.h  buttons.hpp  buzzer.h  buzzer.hpp  core.h  core.hpp  debug.hpp  eeprom.h  eeprom.hpp  encoders.h  encoders.hpp  fan.h  fan.hpp  imu.h  imu.hpp  leds.h  leds.hpp  motors.h  motors.hpp  timers.h  timers.hpp  usb.h  usb.hpp
firmware/inc/bsp/target-stm32g474/: bsp_gpio_mapping.h  dfu.h
firmware/inc/devices/: AS5047P.h  eeprom_24lc512.h  lsm6dsr.h  lsm6dsr_reg.h
firmware/inc/fsm/: event.hpp  fsm.hpp  state.hpp
firmware/inc/services/: adc_service.h  ble_service.h  button.h  config.hpp  control.hpp  driving_service.h  imu_service.h  led_service.h  logger.hpp  maze.hpp  navigation.hpp  notification.hpp  position.hpp  position_service.h  position_service.hpp
firmware/inc/utils/: RingBuffer.hpp  math.h  math.hpp  movement_params.hpp  navigation_types.hpp  pid.hpp  soft_timer.hpp  types.hpp  utils.h
firmware/scripts/: prepare-cube.sh
firmware/src/: main.c  main.cpp
firmware/src/algorithms/: pid.cpp
firmware/src/bsp/target-pc/: analog_sensors.cpp  ble.cpp  buttons.cpp  buzzer.cpp  core.cpp  eeprom.cpp  encoders.cpp  fan.cpp  imu.cpp  leds.cpp  motors.cpp  timers.cpp  usb.cpp
firmware/src/bsp/target-stm32g474/: analog_sensors.c  analog_sensors.cpp  ble.c  ble.cpp  bsp.c  bsp_adc_dma.c  bsp_ble.c  bsp_buzzer.c  bsp_eeprom.c  bsp_fan.c  bsp_gpio.c  bsp_i2c.c  bsp_led.c  bsp_led_ir.c  bsp_motors.c  bsp_spi.c  bsp_uart.c  bsp_vcp.c  bsp_ws2812.c  buttons.c  buttons.cpp  buzzer.c  buzzer.cpp  core.c  core.cpp  dfu.c  eeprom.c  eeprom.cpp  encoders.c  encoders.cpp  fan.c  fan.cpp  imu.c  imu.cpp  leds.c  leds.cpp  motors.c  motors.cpp  pin_mapping.h  timers.c  (+3 more)
firmware/src/bsp/target-stm32g474/devices/: AS5047P.c  AS5047P.cpp  AS5047P.h  AS5047P.hpp  WS2812.hpp  eeprom_24lc512.c  eeprom_24lc512.cpp  eeprom_24lc512.h  eeprom_24lc512.hpp
firmware/src/bsp/target-stm32g474/st/: README.txt  hal.h
firmware/src/bsp/target-stm32g474/st/inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h  usbd_conf.h
firmware/src/bsp/target-stm32g474/st/src/: config.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c  sysmem.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
firmware/src/devices/: AS5047P.c  eeprom_24lc512.c  lsm6dsr.c  lsm6dsr_reg.c
firmware/src/fsm/: fsm.cpp
firmware/src/fsm/states/: calib.cpp  idle.cpp  run.cpp  search.cpp
firmware/src/services/: adc_service.c  ble_service.c  button.c  buzzer_service.c  config.cpp  control.cpp  driving_service.c  imu_service.c  led_service.c  logger.cpp  maze.cpp  navigation.cpp  notification.cpp  position.cpp  position_service.c  position_service.cpp
firmware/src/utils/: movement_params.cpp  soft_timer.cpp
scripts/: .gitignore  maze.py  metrics.py  motion_bench.html  plot_control.py  plot_control_usb.py  simulator.html  velocity_planner.py  velocity_planner_ideal.py  velocity_planner_jerk.py  velocity_planner_s_shape.py
scripts/logs/2026-07-05/: log_12-06-26-kp_0.060_ki-0.0005.txt  log_12-24-16-kp_0.050_ki-0.001.txt  log_12-32-19-kp_0.045_ki-0.0005.txt  log_12-44-37-kp_0.048_ki-0.0005.txt  log_12-45-52-kp_0.042_ki-0.0005.txt  log_12-47-49-kp_0.045_ki-0.00042.txt  log_12-51-16-kp_0.048_ki-0.00042.txt  log_12-58-13-kp_0.05_ki-0.0004.txt  log_13-53-57.txt  log_13-57-01.txt  log_14-01-42.txt  log_14-07-17.txt  log_23-25-50.txt  log_23-33-43.txt  log_23-40-32.txt  log_23-58-29.txt
scripts/logs/2026-07-06/: log_00-11-43.txt  log_00-33-00.txt  log_00-35-46.txt  log_00-41-30.txt  log_01-06-52.txt  log_01-09-41.txt  log_01-14-07.txt  log_01-18-27-kp_0.04_ki-0.0005-ff-0.0037-0.0032.txt  log_01-22-56.txt  log_01-25-12.txt  log_01-46-40.txt  log_01-50-36-kp_0.04_ki-0.0005-ff-0.0037-0.0031.txt  log_01-55-28-kp_0.04_ki-0.00042-ff-0.0037-0.0031.txt  (+20 more)
scripts/motion_bench/: index.html  simulations.js  style.css  ui.js
(+56 files in other folders)
